# osiris-inventario-be

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  dev-up.sh  docker-compose.full.yml  docker-compose.yml  pyproject.toml  start-docker.bat  start-docker.ps1  start-docker.sh  stop-docker.bat  stop-docker.ps1  stop-docker.sh
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_company_config.py  0003_attribute_is_active.py  0003_product_photo.py  0004_product_isbn.py  0005_user_approval_code.py  0006_voided_document_status.py  0007_category_is_default.py  0008_catalogs.py  0009_product_codigo_interno.py  0010_pending_attribute_remap.py  0011_attr_negative_and_params.py  0012_rename_isbn_required_param.py  0013_product_photos_gallery.py  0014_ingreso_purchase_fields_and_suppliers.py  0015_supplier_identification_type.py  0016_company_ingreso_types.py  0017_company_egreso_types.py  0018_baja_reason_and_config.py  0019_egreso_line_discount_fields.py  0020_egreso_adjustment_reason.py  0021_inventory_counts.py  0022_company_sellers_and_egreso_seller.py  0023_add_seller_commission_param.py
app/: main.py
app/core/: config.py  database.py  deps.py  redis.py  (+2 more)
scripts/: create_partitions.py  entrypoint.sh  qa_categories.py  reset_admin_password.py  seed.py
tests/: conftest.py  test_audit.py  test_auth.py  test_catalog.py  test_catalogs.py  test_company_config.py  test_inventory_counts.py  test_inventory_movements.py  test_kardex.py  test_rbac.py  test_reports.py  test_stock_trigger.py
(+119 files in other folders)
